Added link and username columns to facebook_users

--- a/app/views/facebook_users/show.html.haml
+++ b/app/views/facebook_users/show.html.haml
@@ -4,4 +4,4 @@
     - if title
       %li
         = title
-        = "(#{pluralize(result['comments']['count'],'comment')})"
+        = "#{pluralize(result['comments']['count'],'comment')}"
