--- a/app/views/facebook_users/search.html.haml
+++ b/app/views/facebook_users/search.html.haml
@@ -1,1 +1,1 @@
-= link_to @facebook_user.name, "http://www.facebook.com/#{@facebook_user.fb_id}"
+= link_to @facebook_user.name, @facebook_user.link
