Enhanced FacebookUsersController#show as a shortcut to username search

--- a/app/views/facebook_users/show.html.haml
+++ b/app/views/facebook_users/show.html.haml
@@ -1,7 +1,8 @@
-%ul
-  - @results.each do |result|
-    - title = result['message'] ? result['message'] : result['story']
-    - if title
-      %li
-        = title
-        = "#{pluralize(result['comments']['count'],'comment')}"
+= link_to @facebook_user.name, @facebook_user.link
+/ %ul
+/   - @results.each do |result|
+/     - title = result['message'] ? result['message'] : result['story']
+/     - if title
+/       %li
+/         = title
+/         = "#{pluralize(result['comments']['count'],'comment')}"
