Added PostsController and index action within it. Added Cucumber feature for posts#index.

--- a/app/views/facebook_users/search.html.haml
+++ b/app/views/facebook_users/search.html.haml
@@ -1,1 +1,1 @@
-= link_to @facebook_user.name, @facebook_user.link
+= link_to @facebook_user.name, facebook_user_posts_path(@facebook_user.username)
