Added exception handling for expired Facebook API access tokens. Added sorting desc by fb_created_at to display of posts. Added TODO item for posts#index.

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,5 @@
 %ul
-  - @facebook_user.posts.each do |post|
+  - @facebook_user.posts.order("fb_created_at DESC").each do |post|
     %li
       = link_to post.title, "http://www.facebook.com/#{@facebook_user.username}/posts/#{post.fb_id}"
       = "#{pluralize(post.comment_count,'comment')}"
