--- a/app/views/facebook_users/index.html.haml
+++ b/app/views/facebook_users/index.html.haml
@@ -1,3 +1,5 @@
-= form_tag '/facebook_users/search', :method => :get do
-  = label_tag "facebook_user[name]", "Search for a Facebook user or page by name:"
-  = text_field_tag 'facebook_user[name]'
+#toolbarcontainer
+  #toolbar
+    = form_tag '/facebook_users/search', :method => :get do
+      = label_tag "facebook_user[name]", "Search for a Facebook user or page by name:"
+      = text_field_tag 'facebook_user[name]', nil, :size => 45
