Added submit button to search form

--- a/app/views/facebook_users/index.html.haml
+++ b/app/views/facebook_users/index.html.haml
@@ -3,3 +3,4 @@
     = form_tag '/facebook_users/search', :method => :get, :class => 'padded' do
       = label_tag "facebook_user[name]", "Search for a Facebook user or page by name:"
       = text_field_tag 'facebook_user[name]', nil, :size => 45
+      = submit_tag "Go"
